fixed contrast

--- a/bountifulfoods_siteplan/styles/site-plan.css
+++ b/bountifulfoods_siteplan/styles/site-plan.css
@@ -87,6 +87,7 @@ nav a:hover {
 
 .accent1 {
     background-color: #9c27b0;
+    color: white;
 }
 
 .accent2 {
